--- a/assets/scss/layout/_index.scss
+++ b/assets/scss/layout/_index.scss
@@ -3,6 +3,11 @@
 @use "l-reset";
 @use "l-gallery";
 @use "l-splash";
-@use "l-header";
+@use "l-top";
 @use "l-container";
 @use "l-background";
+@use "l-date";
+@use "l-schedule";
+@use "l-seminar";
+@use "l-campaign";
+@use "l-info";
