--- a/assets/scss/global/_setting.scss
+++ b/assets/scss/global/_setting.scss
@@ -42,11 +42,14 @@ $bold: 700;
 $black: 900;
 
 // カラー
-$palette-yellow: #FCCF00;
-$palette-blue: #0F81C5;
+$palette-yellow: #FBD101;
+$palette-red: #CB0024;
+$palette-green: #34B448;
+$palette-purple: #8540CB;
+$palette-orange: #FF6F3C;
+$palette-blue: #0183CB;
 $palette-gray: #F0F3F5;
 $palette-darkgray: #818181;
-$palette-green: #198754;
 $palette-white: #FFFFFF;
 
 // コンテンツ
