--- a/assets/scss/layout/_l-gallery.scss
+++ b/assets/scss/layout/_l-gallery.scss
@@ -1,35 +1,57 @@
-@charset "utf-8";
+@use "../global" as *;
 
 /*==================================================
 ギャラリーのためのcss
 ===================================*/
-.gallery{
-  columns: 4;/*段組みの数*/
-  padding:0 15px;/*ギャラリー左右に余白をつける*/
-  li {
-    margin-bottom: 20px;/*各画像下に余白をつける*/
+.l-gallery{
+  position: relative;
+  &__background {
+    z-index: -1;
+    position: absolute;
+    background-color: $palette-darkgray;
+    border-radius: 200px 0 0 0;
+    opacity: .9;
+    width: 100%;
+    height: 100%;
   }
-
-  /*ギャラリー内のイメージは横幅100%にする*/
-  img{
-    width:100%;
-    height:auto;
-    vertical-align: bottom;/*画像の下にできる余白を削除*/
+  &__body {
+    padding: 80px 0;
   }
-
-  /*　横幅900px以下の段組み設定　*/
-  @media only screen and (max-width: 900px) {
-    columns:3;
-  }
-
-  @media only screen and (max-width: 768px) {
-    columns: 2;
-  }
-
-  ul{
-    margin:0;
-    padding: 0;
-    list-style: none;
+  &__contents {
+    margin-top: 20px;
+    img {
+      border-radius: 10px;
+    }
+    ul {
+      position: relative;
+      background-color: #333;
+      .slick-track {
+        padding: 40px 0;
+      }
+    }
+    li {
+      position: relative;
+      &::before {
+        content: "";
+        width: 100%;
+        height: 20px;
+        position: absolute;
+        top: -30px;
+        background-image: url("../img/bar_white.png");
+        background-repeat: space no-repeat;
+        z-index: 1;
+      }
+      &::after {
+        content: "";
+        width: 100%;
+        height: 20px;
+        position: absolute;
+        bottom: -30px;
+        background-image: url("../img/bar_white.png");
+        background-repeat: space no-repeat;
+        z-index: 1;
+      }
+    }
   }
   
 }
