--- a/assets/scss/global/_setting.scss
+++ b/assets/scss/global/_setting.scss
@@ -50,6 +50,7 @@ $palette-orange: #FF6F3C;
 $palette-blue: #0183CB;
 $palette-gray: #F0F3F5;
 $palette-darkgray: #818181;
+$palette-black: #000000;
 $palette-white: #FFFFFF;
 
 // コンテンツ
