--- a/assets/scss/layout/_l-campaign.scss
+++ b/assets/scss/layout/_l-campaign.scss
@@ -3,10 +3,13 @@
 .l-campaign {
   position: relative;
   background-color: $palette-green;
-  border-radius: 200px 0 0 0;
-  padding: 80px 0;
+  border-radius: 160px 0 0 0;
+  padding: 80px 20px;
   &__contents {
-    padding: 0 20px;
+    margin: 20px;
+    padding: 20px;
+    background-color: $palette-white;
+    border-radius: 8px;
     &--title {
       margin: auto;
       color: $palette-white;
@@ -15,12 +18,19 @@
       margin-bottom: 20px;
       font-weight: bold;
     }
-    &--list {
-      background: $palette-white;
-      padding: 20px;
-      width: calc(100% - 60px);
-      margin: 0 auto;
-      border-radius: 8px;
+    &--top {
+      img {
+        width: 100%;
+      }
+    }
+    &--text {
+      margin-top: 20px;
+    }
+    &--step {
+      margin-top: 20px;
+      img {
+        width: 100%;
+      }
     }
   }
 }
