--- a/assets/scss/layout/_l-gallery.scss
+++ b/assets/scss/layout/_l-gallery.scss
@@ -9,7 +9,7 @@
     z-index: -1;
     position: absolute;
     background-color: $palette-darkgray;
-    border-radius: 200px 0 0 0;
+    border-radius: 160px 0 0 0;
     opacity: .9;
     width: 100%;
     height: 100%;
@@ -54,5 +54,15 @@
     }
   }
   
+}
+.slider_gallery {
+  img {
+    width: 100%;
+    height: auto;
+  }
+
+  .slick-slide {
+    margin: 0 10px;
+  }
 }
 
