--- a/assets/scss/layout/_l-top.scss
+++ b/assets/scss/layout/_l-top.scss
@@ -1,45 +1,57 @@
 @use "../global" as *;
 
 .l-top {
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
-  padding: 20px;
-
-  h1 {
-    img, canvas {
-      width: 100px;
-      position: relative;
-      left: 1.8em;
+  &__contents {
+    text-align: center;
+    &--title {
+      padding: 20px;
+      img {
+        width: 100%;
+      }
     }
-
-    font-size: 2.7vw;
-    color: #666;
-    line-height: 1.5;
-    margin: 0 0 50px 0;
-    letter-spacing: 0.2em;
-
-    span {
-      color: #2e98e5;
-      display: block;
+    &--date {
+      margin: auto;
+      border-radius: 50px;
+      background-color: $palette-blue ;
+      color: $palette-white;
+      padding: 5px 30px;
+      display: inline-block;
+      font-size: 18px;
+      font-weight: bold;
     }
-  }
-
-  &__slider {
-    width: 100%;
-    border-radius: 20px;
-    overflow: hidden;
-    z-index: 1;
-    height: 80vh;
-
-    @include mq(sp) {
-      width: 94%;
-      right: 2%;
+    &--logo {
+      margin-top: 40px;
     }
-
-    .slider-item {
+    &--topics {
+      margin: 40px 20px 20px;
       border-radius: 20px;
-    } 
+      background-color: rgba(255,255,255,.9);
+      padding: 20px;
+    }
   }
-  
 }
-
+.slider_logo {
+  margin-top: 20px;
+  &:first-child {
+    margin-top: 0;
+  }
+  li {
+    background-color: rgba(255,255,255,.9);
+    padding: 10px 20px;
+    border-radius: 20px;
+    height: 80px;
+    vertical-align: middle;
+  }
+  img {
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    margin: auto;
+  }
+  .slick-slide {
+    margin: 0 20px;
+  }
+}
