--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1159,10 +1159,10 @@ audio, canvas, progress, video {
 }
 
 .l-top {
-  min-height: 100vh;
   position: relative;
 }
 .l-top__contents {
+  padding: 20px 0;
   text-align: center;
 }
 .l-top__contents--title {
@@ -1186,9 +1186,78 @@ audio, canvas, progress, video {
 }
 .l-top__contents--topics {
   margin: 40px 20px 20px;
+  padding: 20px 10px 20px 20px;
   border-radius: 20px;
-  background-color: rgba(255, 255, 255, 0.9);
-  padding: 20px;
+  background-color: #FFFFFF;
+  position: relative;
+  border: solid 3px #F0F3F5;
+  /*
+        &::before {
+          content: "";
+          position: absolute;
+          left: -3px;
+          top: -3px;
+          width: calc(100% + 6px);
+          height: calc(100% + 6px);
+          border-radius: 20px;
+          background: linear-gradient(
+            135deg,
+            $palette-red 0%, $palette-red 16%,
+            $palette-orange 16%, $palette-orange 33%,
+            $palette-yellow 33%, $palette-yellow 50%,
+            $palette-green 50%, $palette-green 67%,
+            $palette-blue 67%, $palette-blue 83%,
+            $palette-purple 83%, $palette-purple 100%
+            );
+          z-index: -1;
+        }
+  */
+}
+.l-top__contents--topics ul {
+  list-style: none;
+}
+.l-top__contents--topics li {
+  list-style: none;
+  text-align: left;
+  font-size: 16px;
+  margin-top: 30px;
+  position: relative;
+  padding-left: 50px;
+}
+.l-top__contents--topics li:first-child {
+  margin-top: 0;
+}
+.l-top__contents--topics li span {
+  font-size: 22px;
+  font-weight: bold;
+  border-bottom: solid 1px;
+}
+.l-top__contents--topics li::before {
+  content: "";
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  top: -5px;
+  left: -15px;
+  background-size: contain;
+}
+.l-top__contents--topics li:nth-child(1) span {
+  color: #0183CB;
+}
+.l-top__contents--topics li:nth-child(1)::before {
+  background-image: url(../img/icon_hyogo.png);
+}
+.l-top__contents--topics li:nth-child(2) span {
+  color: #CB0024;
+}
+.l-top__contents--topics li:nth-child(2)::before {
+  background-image: url(../img/icon_handshake.png);
+}
+.l-top__contents--topics li:nth-child(3) span {
+  color: #34B448;
+}
+.l-top__contents--topics li:nth-child(3)::before {
+  background-image: url(../img/icon_present.png);
 }
 
 .slider_logo {
@@ -1198,11 +1267,12 @@ audio, canvas, progress, video {
   margin-top: 0;
 }
 .slider_logo li {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: #FFFFFF;
   padding: 10px 20px;
-  border-radius: 20px;
-  height: 80px;
+  border-radius: 8px;
+  height: 70px;
   vertical-align: middle;
+  border: solid 1px #F0F3F5;
 }
 .slider_logo img {
   width: auto;
@@ -1642,15 +1712,38 @@ audio, canvas, progress, video {
   border-radius: 8px;
 }
 .l-campaign__contents--title {
-  margin: auto;
-  color: #FFFFFF;
-  font-size: 16px;
+  width: 340px;
+  max-width: 100%;
+  background-color: #CB0024;
+  border-radius: 20px;
+  font-size: 20px;
   text-align: center;
-  margin-bottom: 20px;
+  margin: 10px auto 20px;
   font-weight: bold;
+  padding: 2px 8px;
+  color: #FFFFFF;
+}
+.l-campaign__contents--top {
+  position: relative;
 }
 .l-campaign__contents--top img {
   width: 100%;
+}
+.l-campaign__contents--top::before, .l-campaign__contents--top::after {
+  content: "";
+  position: absolute;
+  background-size: contain;
+  width: 100px;
+  height: 100px;
+  bottom: -20px;
+}
+.l-campaign__contents--top::before {
+  background-image: url(../img/campaign_background_left.png);
+  left: -40px;
+}
+.l-campaign__contents--top::after {
+  background-image: url(../img/campaign_background_right.png);
+  right: -40px;
 }
 .l-campaign__contents--text {
   margin-top: 20px;
