--- a/assets/scss/global/_setting.scss
+++ b/assets/scss/global/_setting.scss
@@ -49,6 +49,7 @@ $palette-purple: #8540CB;
 $palette-orange: #FF6F3C;
 $palette-blue: #0183CB;
 $palette-gray: #F0F3F5;
+$palette-lightgray: #CCC;
 $palette-darkgray: #818181;
 $palette-black: #000000;
 $palette-white: #FFFFFF;
