--- a/assets/scss/layout/_l-top.scss
+++ b/assets/scss/layout/_l-top.scss
@@ -65,11 +65,6 @@
         &:first-child {
           margin-top: 0;
         }
-        span {
-          font-size: 22px;
-          font-weight: bold;
-          border-bottom: solid 1px;
-        }
         &::before {
           content: "";
           position: absolute;
@@ -79,28 +74,53 @@
           left: -15px;
           background-size: contain;
         }
-        &:nth-child(1){
+        &.hyougo{
           span {
             color: $palette-blue;
+            &.border::before{
+              border-color: $palette-blue;
+            }
           }
           &::before {
             background-image: url(../img/icon_hyogo.png);
           }
         }
-        &:nth-child(2){
+        &.famous{
           span {
             color: $palette-red;
+            &.border::before{
+              border-color: $palette-red;
+            }
           }
           &::before {
             background-image: url(../img/icon_handshake.png);
           }
         }
-        &:nth-child(3){
+        &.campaign{
           span {
             color: $palette-green;
+            &.border::before{
+              border-color: $palette-green;
+            }
           }
           &::before {
             background-image: url(../img/icon_present.png);
+          }
+        }
+        span {
+          font-size: 22px;
+          font-weight: bold;
+/*          border-bottom: solid 1px;*/
+          &.border{
+            position: relative;
+            &::before{
+              content: '';
+              position: absolute;
+              left: 0;
+              bottom: -3px;
+              border-bottom: solid 2px #000;
+              animation: border_anim 1s linear forwards;
+            }
           }
         }
       }
@@ -118,7 +138,7 @@
     border-radius: 8px;
     height: 70px;
     vertical-align: middle;
-    border: solid 1px $palette-gray;
+    border: solid 1px $palette-lightgray;
   }
   img {
     width: auto;
@@ -129,5 +149,14 @@
   }
   .slick-slide {
     margin: 0 20px;
+  }
+}
+
+@keyframes border_anim {
+  0%{
+    width: 0%;
+  }
+  100%{
+    width: 100%;
   }
 }
