--- a/assets/scss/layout/_l-layout.scss
+++ b/assets/scss/layout/_l-layout.scss
@@ -6,7 +6,7 @@
 body {
   overflow-x: hidden;
 /*  background: #fccf00;*/
-  font-family: 'Kosugi Maru', sans-serif;
+  font-family: 'Hiragino Kaku Gothic Pro', 'ヒラギノ角ゴ Pro W3', 'Noto Sans JP', sans-serif;
   color: #333;
   font-size: 1rem;
   line-height: 1.85;
